#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([EatDot], [0.90],[wang691234@gmail.com])
AC_CONFIG_SRCDIR([source/main.cc])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(EatDot,0.90)
# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile header/Makefile source/Makefile)
